<resources>
    <string name="app_name">Composition</string>
    <string name="time">00:00</string>
    <string name="question">\?</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="games_name">Состав числа</string>
    <string name="rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число. \n \nПример: в верхнем кругу число 7, в одном из нижних знак вопроса, в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="button_understand_text">Понятно</string>
    <string name="game_over">Game Over</string>
    <string name="requires_answers">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="button_retry">Попробовать снова</string>
</resources>